<resources>
    <string name="app_name">Tagger Demo</string>
    <string name="lbl_load_tags_from">Load Tags From:</string>
    <string name="api">API</string>
    <string name="database">Database</string>
    <string name="available_tags">Available Tags:</string>
    <string name="selected_tags">Selected Tags:</string>
    <string name="select_tags">Open Tag Selector</string>
    <string name="no_avail_tags">No available tags</string>
    <string name="no_sel_tags">No selected tags</string>
    <string name="error">Error</string>
    <string name="error_remote_api">Error loading data from remote API</string>
    <string name="loading">Loading...</string>
    <string name="error_no_available_tags">No available tags loaded!</string>
    <string name="select_tags_from">Select Tags From:</string>
    <string name="no_tags_loaded">No available tags loaded. Use one of the three options to load available tags before opening the selector.</string>
    <string name="clear">Clear</string>
    <string name="auto_load">Auto</string>
    <string name="error_no_internet">You are not connected to the Internet. Please connect and try again.</string>
</resources>
