<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Label: Select Tags From -->
    <TextView
        android:id="@+id/lbl_selectTagsFrom"
        style="@style/MainLabelFont.Bold"
        android:text="@string/select_tags_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button: Open tag selector -->
    <Button
        android:id="@+id/btn_selectTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/MainButtonStyle"
        android:text="@string/select_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_selectTagsFrom"/>

    <!-- Label: Selected Tags -->
    <TextView
        android:id="@+id/lbl_selectedTags"
        style="@style/MainLabelFont"
        android:text="@string/selected_tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_selectTags" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@color/tag_json_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_selectedTags">

        <!-- List: Selected Tags-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_selectedTags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:listItem="@layout/row_item_tag_result" />

        <!-- No Selected Tags Message -->
        <TextView
            android:id="@+id/txt_noSelectedTags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tag_json_bg"
            android:gravity="center"
            android:text="@string/no_sel_tags"
            android:visibility="visible" />
    </FrameLayout>

    <!-- Button: Clear selected tags -->
    <Button
        android:id="@+id/btn_clearSelectedTags"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:padding="0dp"
        android:text="@string/clear"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_selectTags" />
</android.support.constraint.ConstraintLayout>